--- a/app/src/main/res/layout/fragment_add_travel.xml
+++ b/app/src/main/res/layout/fragment_add_travel.xml
@@ -34,8 +34,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="64dp"
                 android:gravity="center_horizontal"
-                android:text="LISÄÄ UUSI MATKA"
-                android:textSize="20pt"
+                android:textColor="@color/black"
+                android:text="Add your journeys!"
+                android:textSize="15pt"
                 />
 
             <FrameLayout
@@ -129,12 +130,13 @@
 
             <EditText
                 android:id="@+id/et_value_input"
+                android:background="@drawable/boarder_colorless"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"
                 android:inputType="number"
-                android:hint="Lenght of the travel"
+                android:hint="Length of the travel"
                 />
 
             <CalendarView
@@ -146,6 +148,7 @@
                 />
 
             <EditText
+                android:background="@drawable/boarder_colorless"
                 android:id="@+id/et_update_weight"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -160,6 +163,7 @@
 
     <Button
         android:id="@+id/btn_submit"
+        android:background="@drawable/boarder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
