--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
 
     <TextView
+        android:background="@drawable/boarder"
         android:id="@+id/daily_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,47 +19,60 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/CO2_est_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10"
-        android:textSize="20pt"
-        android:layout_marginTop="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/daily_tip" />
 
-    <TextView
-        android:id="@+id/CO2_est_text"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CO2 Estimate past 7 days"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CO2_est_number" />
+        android:orientation="vertical"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toTopOf="@id/add_btn">
+            <TextView
+                android:layout_gravity="center"
+                android:id="@+id/CO2_est_number"
+                android:textColor="@color/black"
+                android:gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/boarder_colorless"
+                android:text="10"
+                android:textSize="30pt" />
+            <TextView
+                android:id="@+id/CO2_est_text"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:background="@drawable/boarder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CO2 Estimate past 7 days"/>
 
-    <TextView
-        android:id="@+id/change_percent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10 %"
-        android:textSize="20pt"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CO2_est_text" />
 
-    <TextView
-        android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="change to last week"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/change_percent" />
+            <TextView
+                android:id="@+id/change_percent"
+                android:layout_marginTop="32dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/boarder_colorless"
+                android:text="10 %"
+                android:textSize="30pt"
+                app:layout_constraintTop_toBottomOf="@+id/daily_tip"
+                tools:layout_editor_absoluteX="294dp" />
+
+            <TextView
+                android:id="@+id/tv_username"
+                android:background="@drawable/boarder"
+                android:textColor="@color/black"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="change to last week" />
+    </LinearLayout>
+
+
+
 
     <Button
         android:id="@+id/add_btn"
@@ -65,6 +81,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
         android:text="Add"
+        android:background="@drawable/boarder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
