--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="16dp"
     android:layout_height="match_parent">
 
     <ScrollView
@@ -19,33 +21,34 @@
 
 
             <TextView
-                android:layout_width="wrap_content"
+                android:background="@drawable/boarder"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Create New User"
-                android:textSize="40sp"
-                app:layout_constraintBottom_toTopOf="@id/linearMain"
+                android:textColor="@color/black"
+                android:textSize="13pt"
+                android:layout_marginTop="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
-
+                android:layout_marginTop="16dp"
                 android:id="@+id/linearMain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.498"
                 tools:ignore="MissingConstraints">
 
 
                 <EditText
                     android:id="@+id/editFirstName"
+                    android:background="@drawable/boarder_colorless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="32dp"
@@ -56,6 +59,7 @@
 
                 <EditText
                     android:id="@+id/editLastName"
+                    android:background="@drawable/boarder_colorless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="32dp"
@@ -66,6 +70,7 @@
 
                 <TextView
                     android:id="@+id/textDisplayDate"
+                    android:background="@drawable/boarder_colorless"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginHorizontal="32dp"
@@ -89,6 +94,7 @@
 
                         <EditText
                             android:id="@+id/editHeight"
+                            android:background="@drawable/boarder_colorless"
                             android:layout_width="100dp"
                             android:layout_height="45dp"
                             android:gravity="center"
@@ -101,11 +107,13 @@
                             android:layout_marginHorizontal="4dp"
                             android:gravity="center"
                             android:text="cm"
+                            android:textColor="@color/black"
                             android:textSize="20dp" />
 
 
                         <EditText
                             android:id="@+id/editWeight"
+                            android:background="@drawable/boarder_colorless"
                             android:layout_width="100dp"
                             android:layout_height="45dp"
                             android:layout_marginVertical="4dp"
@@ -114,6 +122,7 @@
                             android:inputType="number" />
 
                         <TextView
+                            android:textColor="@color/black"
                             android:layout_width="50dp"
                             android:layout_height="45dp"
                             android:layout_marginHorizontal="4dp"
@@ -127,6 +136,7 @@
 
                 <EditText
                     android:id="@+id/editUserNameRegister"
+                    android:background="@drawable/boarder_colorless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="32dp"
@@ -137,6 +147,7 @@
 
                 <EditText
                     android:id="@+id/editPasswordRegister"
+                    android:background="@drawable/boarder_colorless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="32dp"
@@ -164,24 +175,23 @@
 
                 <Button
                     android:layout_width="wrap_content"
+                    android:background="@drawable/boarder"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:gravity="center"
+                    android:onClick="returnLogin"
+                    android:text="nope" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:background="@drawable/boarder"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:gravity="center"
                     android:onClick="register"
                     android:text="create" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:gravity="center"
-                    android:onClick="returnLogin"
-                    android:text="eiku" />
-
-
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
