--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,6 +18,7 @@
 
     <TextView
         android:id="@+id/tv_name"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -31,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
+        android:textColor="@color/black"
         android:clickable="true"
         android:focusable="true"
         android:text="@string/go_profile"
@@ -45,10 +47,12 @@
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:text="Dark Mode"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile" />
 
     <ScrollView
+        android:id="@+id/scroll_view_log"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintBottom_toBottomOf="parent"
