--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="16dp"
     android:layout_height="match_parent">
 
     <TextView
@@ -24,7 +23,8 @@
 
     <EditText
         android:id="@+id/editPasswordLogin"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="32dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
@@ -72,7 +72,8 @@
 
     <EditText
         android:id="@+id/editUserNameLogin"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="32dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="16dp"
@@ -88,6 +89,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="32dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
