--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,14 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="16dp"
     android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="160dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,13 +16,13 @@
             android:gravity="center"
             android:orientation="vertical">
 
-
             <TextView
                 android:background="@drawable/boarder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Create New User"
+                android:layout_marginHorizontal="16dp"
+                android:text="Create new user"
                 android:textColor="@color/black"
                 android:textSize="13pt"
                 android:layout_marginTop="32dp"
@@ -44,7 +41,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints">
-
 
                 <EditText
                     android:id="@+id/editFirstName"
@@ -85,7 +81,7 @@
                     android:layout_gravity="center">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="32dp"
                         android:layout_marginVertical="16dp"
@@ -108,7 +104,7 @@
                             android:gravity="center"
                             android:text="cm"
                             android:textColor="@color/black"
-                            android:textSize="20dp" />
+                            android:textSize="10pt" />
 
 
                         <EditText
@@ -128,7 +124,7 @@
                             android:layout_marginHorizontal="4dp"
                             android:gravity="center"
                             android:text="kg"
-                            android:textSize="20dp" />
+                            android:textSize="10pt" />
 
                     </LinearLayout>
 
@@ -163,15 +159,12 @@
                 android:id="@+id/buttonsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/linearMain"
-                app:layout_constraintVertical_bias="0.421">
+                app:layout_constraintTop_toBottomOf="@id/linearMain">
 
                 <Button
                     android:layout_width="wrap_content"
